examples/utils/core/error/src/layers/app.cpp
/**
 * @file app.cpp
 * @date 29.08.2024
 * @author fs
 * @copyright Copyright (C) querdenker engineering GmbH - All Rights Reserved
 *            For detailed information, read the license file in
 *            the project root directory.
 */

#include <app.h>

namespace app
{
void App::start()
{
    m_app.start();
}
}  // namespace app
